# timeseries-predictor

./: .gitignore  README.md  pyproject.toml
bike_sharing_timeseries_predictor/model/: bike_rental_prediction_NN.py
bike_sharing_timeseries_predictor/utils/: HurryPlotter.py
notebooks/: BY_DSC_Task_1_final.ipynb
tests/: test.py
